Fix (potentially) x-scrollbar showing

--- a/src/app/components/feed/postlist/postlist.component.sass
+++ b/src/app/components/feed/postlist/postlist.component.sass
@@ -8,6 +8,7 @@ $mat-card-header-size: 40px !default
   margin-top: 0.5em
   outline: none
   user-select: none
+  overflow-x: hidden
 
   ::ng-deep .mat-card-header-text
     margin-top: 10px
